Se agrega Variable ecuador en el combo box de origen

--- a/tiquetesDeAvionExamen1/tiquetesDeAvionExamen1.vbproj
+++ b/tiquetesDeAvionExamen1/tiquetesDeAvionExamen1.vbproj
@@ -87,9 +87,11 @@
     </Compile>
     <Compile Include="frmOperaciones.Designer.vb">
       <DependentUpon>frmOperaciones.vb</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="frmOperaciones.vb">
       <SubType>Form</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="frmPrincipal.vb">
       <SubType>Form</SubType>
@@ -123,6 +125,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmOperaciones.resx">
       <DependentUpon>frmOperaciones.vb</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.vb</DependentUpon>
